crates/pg_syntax/tests/snapshots/postgres_regress/regex@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'bbc' ~ '^([bc])\\1*$' as f;"
---
SelectStmt@0..34
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..33
    AExpr@7..28
      AConst@7..12
        Sconst@7..12 "'bbc'"
      Whitespace@12..13 " "
      Op@13..14 "~"
      Whitespace@14..15 " "
      AConst@15..28
        Sconst@15..28 "'^([bc])\\1*$'"
    Whitespace@28..29 " "
    As@29..31 "as"
    Whitespace@31..32 " "
    Ident@32..33 "f"
  Ascii59@33..34 ";"

