crates/pg_syntax/tests/snapshots/postgres_regress/regex@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'b' ~ '^([bc])\\1*$' as t;"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..31
    AExpr@7..26
      AConst@7..10
        Sconst@7..10 "'b'"
      Whitespace@10..11 " "
      Op@11..12 "~"
      Whitespace@12..13 " "
      AConst@13..26
        Sconst@13..26 "'^([bc])\\1*$'"
    Whitespace@26..27 " "
    As@27..29 "as"
    Whitespace@29..30 " "
    Ident@30..31 "t"
  Ascii59@31..32 ";"

