crates/pg_syntax/tests/snapshots/postgres_regress/regex@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'a' ~ '$($$)+';"
---
SelectStmt@0..22
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..21
    AExpr@7..21
      AConst@7..10
        Sconst@7..10 "'a'"
      Whitespace@10..11 " "
      Op@11..12 "~"
      Whitespace@12..13 " "
      AConst@13..21
        Sconst@13..21 "'$($$)+'"
  Ascii59@21..22 ";"

